<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp"
    android:elevation="18dp"
    app:cardBackgroundColor="#AFD3E2"
    app:cardCornerRadius="22dp">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginVertical="12dp"
        android:id="@+id/linbackg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtshowquote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quotes_in_show_data"
            android:textColor="#0C134F"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="12dp">


        <LinearLayout
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#AFD3E2"
                android:contentDescription="@string/not_found"
                android:src="@drawable/baseline_content_copy_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/copy"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="5dp"
                android:background="#AFD3E2"
                android:src="@drawable/baseline_share_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>