<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F81E5"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Sign_in_Screen">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="32.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:elevation="22dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#6AA8F1">



                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/baseline_email_24" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:textSize="20sp"
                    android:hint="@string/enter_your_email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginBottom="5dp"
            android:text="Password"
            android:textColor="#ffffff"
            android:textSize="15dp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:elevation="22dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#6AA8F1">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/baseline_lock_24" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="@string/enter_your_password"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:text="Forget Password?"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:checked="true"
            app:buttonTint="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Remember Me"
            android:textColor="@color/white"
            android:textSize="18dp" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            >



            <androidx.constraintlayout.utils.widget.MotionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="22dp"
                android:id="@+id/btn"
                android:background="@drawable/round_background"
                android:textColor="#76BCFF"/>



        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="OR"
        android:textColor="@color/white"
        android:textSize="18dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In With"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:layout_marginTop="12dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:gravity="center">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/facebook"/>



        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="38dp"
            android:scaleType="centerCrop"
            android:src="@drawable/google"/>




    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="82dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginStart="80dp"
        android:text="Don't have an Account? "
        android:layout_marginTop="8dp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18dp"
        android:text="Sign Up"
        android:layout_marginTop="8dp"
       android:layout_marginStart="3dp"
        android:textStyle="bold"
        />

    </LinearLayout>



</LinearLayout>